index html created

--- a/index.html
+++ b/index.html
@@ -11,36 +11,46 @@
     <title>Dexter's site in Bootstrap</title>
   </head>
   <body>
-<div class="container">
 
-    <nav class="navbar bg-white navbar-white  navbar-light" navbar-expand-sm navbar-expand-md>
-        <div class="navbar-nav">
-        <div class="navbar-brand">Dexter Valencia</div>
-        <div class="container"><!-- ul container -->
-        <div class="navbar-nav">
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-item nav-link" href="index.html">About</a></li>
-                <li class="nav-item nav-link">|</li>
-                <li class="nav-item"><a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item nav-link">|</li>
-                <li class="nav-item"><a class="nav-item nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div><!-- ul container -->
-    </div>  
-        </div>        
+    <nav class="navbar bg-white navbar-white  navbar-expand-sm">
+    <div class="container">    
+        <div class="h2 navbar-text bg-info navbar-white px-3 py-3 font-weight-bolder text-white">Dexter Valencia</div>
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">About</a>
+                <a class="nav-item nav-link">|</a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link">|</a>
+                <a class="nav item nav-link" href="contact.html">Contact</a>
+            </div>    
+        </div>
+    </div>    
     </nav>
 
+    <!-- about me --> 
+<div class="container-fluid bg-secondary">
+    <div class="container">
+    <div class="row">
+    <div class="col-8">
+        <div class="container bg-white clearfix my-4">
+        <div class="h3 text-info weight-bold">About Me</div>
+            <hr>
+            <div class="float-left"><img src="" alt="me" style="width: 150px; height: 150px"></div>
+            <p">When people ask me what do I do, I tend to avoid the question? But if you ask me what I like, I'll tell you less then if you ask me about if the grass is green. Yes, I can be confusing as Monday morning and Sunday evening, but then end result is not what you think.</p>
+            <p>If you must know, ok, let me begin my long winded story. I like to ..., I watch ..., I eat ..., I brush ..., I scream at ... As you can see, if you know what I'm getting at, there is much to imagine. Not only I can speak without speaking, but I can tell you a lot with the object. Please, browse around. Don't stay long! There are places to go, things to see, much to do. </p>
+        </div><!-- about me -->
+    </div><!--row-->
+</div><!--col-->
+</div>
+</div><!--about container end-->
 
-    
-</div><!--container end-->
-
-
-
-
-
+<div class="sticky-bottom bg-info border border-top border-color-white">
+    <div class="row">
+        <div class="col-12">
+            <div class="text-center py-3">Copyright &copy;
+                </div>
+        </div>
+    </div>
+</div>
 
 
     <!-- Optional JavaScript -->
