--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container bg-white clearfix my-4">
         <div class="h3 text-info weight-bold">About Me</div>
             <hr>
-            <div class="float-left"><img src="" alt="me" style="width: 150px; height: 150px"></div>
+            <div class="float-left mr-3"><img src="images/me.jpg" alt="me" style="width: 150px; height: 150px"></div>
             <p">When people ask me what do I do, I tend to avoid the question? But if you ask me what I like, I'll tell you less then if you ask me about if the grass is green. Yes, I can be confusing as Monday morning and Sunday evening, but then end result is not what you think.</p>
             <p>If you must know, ok, let me begin my long winded story. I like to ..., I watch ..., I eat ..., I brush ..., I scream at ... As you can see, if you know what I'm getting at, there is much to imagine. Not only I can speak without speaking, but I can tell you a lot with the object. Please, browse around. Don't stay long! There are places to go, things to see, much to do. </p>
         </div><!-- about me -->
@@ -46,7 +46,7 @@
 <div class="sticky-bottom bg-info border border-top border-color-white">
     <div class="row">
         <div class="col-12">
-            <div class="text-center py-3">Copyright &copy;
+            <div class="text-white text-center py-3">Copyright &copy;
                 </div>
         </div>
     </div>
