--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
   </head>
   <body>
 
+<div class="container-fluid clearfix bg-white">
     <nav class="navbar bg-white navbar-white  navbar-expand-sm">
     <div class="container">    
-        <div class="h2 navbar-text bg-info navbar-white px-3 py-3 font-weight-bolder text-white">Dexter Valencia</div>
+        <div class="h2 navbar-text bg-info navbar-white px-3 py-3 font-weight-bolder text-white float-bottom">Dexter Valencia</div>
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">About</a>
+                <a class="nav-item nav-link text-dark" href="index.html">About</a>
                 <a class="nav-item nav-link">|</a>
-                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link text-dark" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link">|</a>
-                <a class="nav item nav-link" href="contact.html">Contact</a>
+                <a class="nav item nav-link text-dark" href="contact.html">Contact</a>
             </div>    
         </div>
     </div>    
     </nav>
+</div>
 
     <!-- about me --> 
 <div class="container-fluid bg-secondary">
