zero margin and padding on navbar container

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   </head>
   <body>
 
-<div class="container-fluid clearfix bg-white">
-    <nav class="navbar bg-white navbar-white  navbar-expand-sm">
-    <div class="container">    
-        <div class="h2 navbar-text bg-info navbar-white px-3 py-3 font-weight-bolder text-white float-bottom">Dexter Valencia</div>
-            <div class="navbar-nav">
+        
+
+<div class="container-fluid bg-white clearfix">
+    <nav class="navbar bg-white navbar-white  navbar-expand-sm my-0 py-0">
+    <div class="container my-0 py-0">    
+        <div class="myname h2 navbar-text bg-info navbar-white px-3 py-3 mb-0 font-weight-bolder text-white float-bottom">Dexter Valencia</div>
+            <div class="navbar-nav my-0 py-0">
                 <a class="nav-item nav-link text-dark" href="index.html">About</a>
                 <a class="nav-item nav-link">|</a>
                 <a class="nav-item nav-link text-dark" href="portfolio.html">Portfolio</a>
@@ -33,7 +35,7 @@
     <div class="container">
     <div class="row">
     <div class="col-8">
-        <div class="container bg-white clearfix my-4">
+        <div class="container bg-white clearfix my-4 py-2">
         <div class="h3 text-info weight-bold">About Me</div>
             <hr>
             <div class="float-left mr-3"><img src="images/me.jpg" alt="me" style="width: 150px; height: 150px"></div>
